--- a/CF.html
+++ b/CF.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Bienvenue sur ma page web</h1>
     <p>Bonjour et bon courage dans votre examen en DevOps.</p>
+    <p>les modification approrter a la deusieme branche dev</p>
 </body>
 </html>
