--- a/CF.html
+++ b/CF.html
@@ -14,6 +14,7 @@
     <p>les modification approrter a la deusieme branche dev</p>
 
     <p>Test code heur 15:59</p>
+    <p>pull</p>
 
 </body>
 </html>
